refactor: enhance LobbyItems and LobbyListener with persistent data keys for item metadata